<resources>
    <string name="app_name">MyMovieDB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="movie_picture_content_description">Movie Picture</string>
    <string name="detail_error_message">No data available for this movie</string>
    <string name="detail_over_view_label">Over View</string>
    <string name="detail_vote_average_label">Vote Average</string>
    <string name="detail_movie_label">Original Title</string>
    <string name="detail_release_date_label">Release Date</string>
    <string name="details_vote_count_label">Vote Count</string>
    <string name="error_internet_connection">Can\'t connect to the Internet</string>
    <string name="retry">Try Again</string>
    <string name="pref_sort_type">sort_type</string>
    <string name="pref_sort_type_title">Sort Movies By</string>
    <string name="loading_data">Loading data ..</string>
</resources>
