<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ezz.abdulaziz.project2_popularmovies_stage1.activities.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvMovieTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/detail_movie_label"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitleLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleLabel"
            tools:text="Movie Original Title" />

        <LinearLayout
            android:id="@+id/llVote"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle">

            <TextView
                android:id="@+id/tvVoteAverageLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/detail_vote_average_label"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                tools:text="7.8" />

            <TextView
                android:id="@+id/tvVoteCountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/details_vote_count_label"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVoteCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                tools:text="57" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/rbVoteAverage"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:foregroundGravity="center"
            android:isIndicator="true"
            android:numStars="10"
            android:rating="5"
            android:stepSize="0.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/detail_release_date_label"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/llVote"
            app:layout_constraintTop_toBottomOf="@+id/llVote" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvReleaseDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/llVote"
            tools:text="28-02-2018" />

        <TextView
            android:id="@+id/tvOverViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/detail_over_view_label"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvReleaseDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateLabel" />

        <TextView
            android:id="@+id/tvOverView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvOverViewLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvOverViewLabel"
            tools:text="Plot Synopsis review" />

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>